lots of bibliography format fixes, still some weird formats

--- a/chap1.tex
+++ b/chap1.tex
@@ -1367,14 +1367,16 @@ contested.
 %% that technology would progress faster than human beings change:
 %% the ``link'' that improves the least ``is the man himself'' \cite[p. 19]{DM}.}
 
+%% \cite{dreamsofspace}
+
 Manned spaceflight might seem to be a story having little to do with
 automation, as its public picture has often focused on the skill and
 bravery of human astronauts. But it did not begin this way: from 1952
 to 1954, \emph{Collier's} 
 magazine published a series of articles 
 titled \emph{Man Will Conquer Space Soon} which described Wernher von
-Braun's vision for manned spaceflight \cite{scribdColliers}
-\cite{dreamsofspace}.\footnote{The illustrations from this magazine
+Braun's vision for manned spaceflight
+\cite{scribdColliers}.\footnote{The illustrations from this magazine 
   are reputed to be some of the ``most influential images of the early
 space age'' \cite[p. 9]{marketingMoon}.} Lurking behind this majestic
 picture of manned spaceflight was a dark 
