--- a/concl.tex
+++ b/concl.tex
@@ -652,11 +652,11 @@ ones built to replace them.
 %% view of reality it does not do justice
 %% to the complexity of the situation. T
 
-Narratives that undue caution in the
+Narratives that claim undue caution in the
 rollout of autonomous vehicles will directly ``cost'' lives---since
 people are killed by human drivers every day \cite{driverlessfuture}
-\cite{baileyReason} \cite{howardRobots}---
-may be used as a lever to argue for the moral imperative of
+\cite{baileyReason} \cite{howardRobots}---may be used as a lever to
+argue for the moral imperative of 
 speedy legalization and acceptance, pitted against risk-averse regulators who face
 public censure if but one child is killed by a
 ``robot car.'' But the statistics about driverless
@@ -703,7 +703,7 @@ not-yet-imagined possibilities. Automation is not a
 take-it-or-leave-it phenomenon, and the choice to accept one
 particular model of vehicle automation or accept tens-of-thousands of
 prospective road fatalities is a false choice. There is more on heaven
-and earth than is dreamt of in this philosophy, and it is time we ask
+and earth than is dreamt of in this philosophy; and it is time we ask
 of autonomy not the na\"{\i}ve questions of whether it will keep us
 safe and improve our cities, but the deep, engaged, and difficult
 questions of how it can be leveraged to achieve such aims. The real
