--- a/main.bib
+++ b/main.bib
@@ -381,7 +381,7 @@
    title = "{B}ig {D}ata, {H}ype, the {M}edia and {O}ther {P}rovocative {W}ords to {P}ut in a {T}itle",
    journal = "UC Berkeley AMPLab",
    month = "October 22",
-   year = 2014,
+   year = "October 22, 2014",
    note = "Via the Internet Archive: http://web.archive.org/web/20150124043915/https://amplab.cs.berkeley.edu/2014/10/22/big-data-hype-the-media-and-other-provocative-words-to-put-in-a-title/",
 }
 
@@ -435,7 +435,7 @@
    title = "{I}n an effort to suck up to local governments, {U}ber plans to share your ride data",
    journal = "Boing Boing",
    month = "January 15",
-   year = 2015,
+   year = "January 15, 2015",
    note = "http://boingboing.net/2015/01/15/in-an-effort-to-suck-up-to-loc.html",
 }
 
@@ -727,7 +727,7 @@
    key = "Court of Justice of the European Union",
    author = "",
    title = "{P}ress {R}elease {N}o. 70/14",
-   year = 2014,
+   year = "May 13, 2014",
    publisher = "Luxembourg",
    month = "May 13",
 }
@@ -1183,7 +1183,7 @@
    title = "{F}or {M}ore {P}arents, {I}t's {U}ber to the {R}escue",
    journal = "Time",
    month = "November 14",
-   year = 2013,
+   year = "November 14, 2013",
    note = "http://healthland.time.com/2013/11/14/for-more-parents-its-uber-to-the-rescue/",
 }
 
@@ -1472,6 +1472,7 @@
 
 @ARTICLE{NOAA1,
    author = "{NOAA}",
+   year = "Accessed April 28, 2015",
    title = "{A}lvin",
    journal = "NOAA Website",
    note = "http://oceanexplorer.noaa.gov/technology/subs/alvin/alvin.html",
@@ -1479,6 +1480,7 @@
 
 @ARTICLE{NOAA2,
    author = "{NOAA}",
+   year = "Accessed April 28, 2015",
    title = "{J}ason",
    journal = "NOAA Website",
    note = "http://oceanexplorer.noaa.gov/technology/subs/jason/jason.html",
@@ -1541,7 +1543,7 @@
    title = "1958 {I}mperial: {W}hat {I}t's {L}ike {T}o {D}rive {A}n {A}uto-{P}ilot {C}ar",
    journal = "Popular Science",
    month = "April",
-   year = "1958",
+   year = "April, 1958",
    note = "Available at http://www.imperialclub.com/~imperialclub/Articles/58AutoPilot/index.htm",
 }
 
@@ -1763,7 +1765,7 @@
    title = "{H}ow {M}ercedes' {F} 015 self-driving car is shaping smart cities",
    journal = "SlashGear",
    month = "March 20",
-   year = "2015",
+   year = "March 20, 2015",
    note = "http://www.slashgear.com/how-mercedes-f-015-self-driving-car-is-shaping-smart-cities-20374602/",
 }
 
@@ -2095,7 +2097,7 @@
    title = "{T}he {C}urious {C}ase of {A}pple's {S}upposed {S}elf-{D}riving {C}ar",
    journal = "Wired",
    month = "February 06",
-   year = "2015",
+   year = "February 06, 2015",
    note = "http://www.wired.com/2015/02/apple-self-driving-car/",
 }
 
@@ -2105,7 +2107,7 @@
    title = "{V}olvo {C}ar {G}roup's first self-driving {A}utopilot cars test on public roads around {G}othenburg",
    journal = "Volvo Cars of North America Newsroom",
    month = "April 29",
-   year = "2014",
+   year = "April 29, 2014",
    note = "https://www.media.volvocars.com/us/en-us/media/pressreleases/145619/volvo-car-groups-first-self-driving-autopilot-cars-test-on-public-roads-around-gothenburg",
 }
 
