little changes to cites

--- a/abstract.tex
+++ b/abstract.tex
@@ -35,14 +35,16 @@ technologies and fields involved in visions of full
 automation (machine vision, mapping, algorithmic ethics), which bear investigating
 for the possible futures of 
 automation that they present.
-However, other potential narratives for looking at automation exist,
+However, other paradigms for automation exist,
 representing lenses from
 literature in the fields of human supervisory control and
 joint-cognitive systems design. These fields---compared with
 that of AI---provide a very
 different read on what automation means and where it is headed in the
 future, which leads to the possibility of different futures, with
-different stakes and trade-offs. Finally, this work examines what cultural
+different stakes and trade-offs. The work examines how automation
+taxonomies, such as that by the NHTSA, fail to account for these
+possibilities. Finally, this work examines what cultural 
 understandings need to change to 
 make this (cyborg) picture more broadly comprehensible, and suggest potential
 impacts for policy and future technological development. It argues that
@@ -51,4 +53,4 @@ our hybrid engagements with machines, and recognition that automation
 alone does not solve any social problems, can alter public
 opinion and policy in productive ways, away from focus on
 ``autonomous'' robots divorced from human agency, and toward
-system-level joint human-machine designs that address social needs. 
+system-level joint human-machine designs that address societal needs. 
