--- a/chap2.tex
+++ b/chap2.tex
@@ -1491,12 +1491,12 @@ it also represents a situation in which passengers give over their
 agency to pilots performing a job they do not understand and could not
 take over in an emergency. Perceived safety---due to accident scale,
 publicity, trust, or other factors---may be very different than statistical
-safety.\footnote{The CAST working group has had to account for these
-  issues in their attempt to reduce airline accident rates by 80 percent \cite[p.
+safety.\footnote{The CAST working group accounted for these
+  issues in their plan to reduce airline accident rates by 80 percent \cite[p.
     28]{PARCCAST}.
-If air traffic were to continue to increase
-with industry predictions but to maintain the 1997 rate of 1.5 major
-crashes per 1 million departures, we would see one fatal crash per
+If air traffic were to increase
+with industry predictions but maintain the 1997 rate of 1.5 major
+crashes per 1 million departures, we could have seen one fatal crash per
 week by 2005, and one per day by 2025 \cite{predictmorecrashes}.
 This frequency of accidents was judged to be intolerable to
 airline customers.} But while research into how to get human beings to trust robotic drivers
@@ -1584,10 +1584,13 @@ they are supposed to solve'' \cite{novakNationalAutomated}.}
 %% centers with reduced potential for vibrant civic life \cite[p.
 %% 60]{miaraBoston}.
 
+%% INFORMANT
+%% , and those of a fellow
+%% researcher performing ethnographic work,
+
 Developers tend to buy into utopian visions of big cities freed of cars, with no
 parked cars on the streets and only driverless cabs.\footnote{My
-  interviews, and those of a fellow
-researcher performing ethnographic work, suggest developers see
+  interviews suggest developers see
 themselves as trying to change society. This self-image is not limited
 to those working on mobility systems \cite{naughtonTech}.} This desire to
 change the way cities operate is admirable: our cities have a
@@ -1660,11 +1663,11 @@ increases would be necessary to match the
 throughputs of buses or subway trains, which can be 100 times
 greater \cite[p. 222]{loweCars}.\footnote{Adams and Brewer
   estimate 10 solo drivers per square foot of right-of-way per
-  hour for conventional highways, and between 100 and 200 for their
+  hour for conventional highways, and between 100 and 200 for
   modified approaches that use normal subcompact vehicles and special
-  bubble-like micro-cars, respectively. Lowe describes that
+  bubble-like micro-cars, respectively. Lowe describes
   per-hour capacity for 
-  a rail line can be as high as 70,000 people, compared with 30,000 for buses
+  a rail line as high as 70,000 people, compared with 30,000 for buses
 and just 8,000 for private cars.} Much depends on actual usage.
 Utopian visions of increased capacity forget the complex dynamics of
 human behavior: city planning has found 
@@ -1755,8 +1758,8 @@ panel.} These risks are not equally distributed. An intersection that requires
 an electronic device to request a slot 
 to cross will not gracefully tolerate the poor, or anyone who
 does not own a smart car or smart phone, whatever his or her age,
-race, class, or situation. Looking more closely, one informant
-described to me, the visions
+race, class, or situation. Looking more closely, one researcher
+described, the visions
 of driverless car developers
 often have a male bias: businessmen
 taking driverless cabs to work, and drunk students using
@@ -1800,12 +1803,16 @@ improve, rather than erode, equitable access to transportation.
 When the
 expected user is the commuting, upper-middle-class, working father or
 the privileged college boy (and the opposers of the technology are
-branded as ``soccer moms,'' as one researcher said), we risk developing
+branded as ``soccer moms,'' as one informant said), we risk developing
 vehicles that preferentially serve certain dominant uses and not
-others. When I asked one informant whether the developers have an idea
-of what driverless cars would mean for people who have children, he
-replied:  ``They don't think about it.'' While certainly not shared by
-all developers in this space, it is not a vision we can afford.
+others. Driverless vehicles stand to mean many things to many
+different people, and though this blindness to other needs and uses may not be
+shared by all developers in this space, it is not one we can afford.
+
+%% When I asked one informant whether the developers have an idea
+%% of what driverless cars would mean for people who have children, he
+%% replied:  ``They don't think about it.'' While certainly not shared by
+%% all developers in this space, it is not a vision we can afford.
 
 \section{Conclusion}
 
