--- a/chap3.tex
+++ b/chap3.tex
@@ -658,8 +658,10 @@ in sufficient detail.
 
 The engineering standards and
 policy documents set up to
-guide the industry's development---particularly levels-of-autonomy
-formulations, which come from a long history of such taxonomies \cite{parasuramanW} \cite{PSWickens} \cite{ALFUS} \cite{SMART}\footnote{Perhaps traceable, in a way, to 
+guide the industry's development---particularly levels-of-automation
+formulations, coming from a long history of such taxonomies
+\cite{PSWickens} \cite{SMART} \cite{ALFUS}
+\cite{parasuramanW}\footnote{Perhaps traceable, in a way, to   
   Sheridan's work \cite[p. 23]{DSB}.}---strongly shape the automated
 vehicles narratives. Developed to guide
 researchers and public agencies toward an appropriate understanding of
