--- a/cover.tex
+++ b/cover.tex
@@ -147,7 +147,7 @@ Manufacturing (STS) \\ Professor of Aeronautics and Astronautics}
 Any substantial work of writing has a long gestation period, and this
 has been no exception. A great number of people come to mind who have
 contributed to the existence of this thesis over the last 20 months,
-but I fear I must 
+and I fear I must 
 inevitably leave some out. To them I can say only \emph{mea maxima culpa}. 
 
 No master's thesis is complete without a
@@ -156,17 +156,18 @@ for her careful reading and editing, and her ceaseless dedication (including per
 game nights) to ensuring we all make it through the master's process with most of our
 sanity intact. David Mindell has also been a continual resource
 throughout the writing of this thesis---and indeed is cited frequently
-within it---and I look forward to continuing to work with him on
+within it---and I greatly appreciate his encouragement that I cut down
+and sharpen it. I look forward to continuing to work with him on
 future projects. Nick Montfort (who has exhorted me repeatedly to, as
 much as possible, interrogate the technical objects themselves),
 William Uricchio (who has challenged my terminological precision),
-Heather Hendershot (who has kept my eye on science fiction) have all
+and Heather Hendershot (who has kept my eye on science fiction) have all
 been indispensable in their own ways, and have given freely of both
 thesis and career advice. Discussions with Kate Crawford, Nick Seaver,
 Tarleton Gillespie, Merritt Roe Smith, Stefan Helmreich, and G\"{o}de Both have also
 shaped this work and made it what it is; as have innumerable
 discussions at conferences. Conversations with a number of informants
-(including Ryan Chin, Jim Womack, and John Leonard)
+(including Ryan Chin and John Leonard)
 furnished important material, and though I cannot list all of them by
 name, I wish to thank them all for giving of their time.
 
@@ -185,9 +186,11 @@ classmates at MIT HASTS for their input and encouragement,
 particularly Alison Laurence and Clare Kim.
 
 My parents, Barbara Mindell and Lee Stayton, have often been the first
-to hear my ideas, and have provided irreplaceable editing and feedback
-on this and other projects during my two years at MIT. I am so pleased
-to have been able to share this work with you, and both it, and I,
+to hear my ideas, and have provided irreplaceable feedback
+on this and other projects during my two years at MIT. Barbara, thank
+you so much for your willingness to read and edit ``just one last
+time.'' I am so pleased 
+to have been able to share this work with both of you, and both it, and I,
 have profited immensely from your input and your presence. Abigail
 Strait, whose food, hospitality, and seemingly endless supply of tea I have
 partaken of innumerable (at least more than twenty!) times during the
