--- a/main.bib
+++ b/main.bib
@@ -468,7 +468,7 @@
 }
 
 @ARTICLE{scifiToReality,
-   key = "A Window Into a Driverless...",
+   key = "A Window...",
    author = "",
    title = "{A} {W}indow {I}nto A {D}riverless {F}uture: {F}rom {S}cience {F}iction To {R}eality",
    journal =  "Seeking Alpha",
@@ -1760,6 +1760,15 @@
    note = "Available at SSRN: http://ssrn.com/abstract=2336234",
 }
 
+@ARTICLE{slashgearDaviesT,
+   author = "Chris Davies",
+   title = "{T}esla {M}odel {S} {A}utopilot update due in 3-4 months",
+   journal = "SlashGear",
+   month = "March 19",
+   year = "March 19, 2015",
+   note = "http://www.slashgear.com/tesla-model-s-autopilot-update-due-in-3-4-months-19374458/",
+}
+
 @ARTICLE{slashgearDavies,
    author = "Chris Davies",
    title = "{H}ow {M}ercedes' {F} 015 self-driving car is shaping smart cities",
@@ -1776,15 +1785,6 @@
    month = "March 31",
    year = "March 31, 2015",
    note = "http://www.forbes.com/sites/freddiedawson/2015/03/31/how-far-away-is-driverless-technology-really/",
-}
-
-@ARTICLE{slashgearDaviesT,
-   author = "Chris Davies",
-   title = "{T}esla {M}odel {S} {A}utopilot update due in 3-4 months",
-   journal = "SlashGear",
-   month = "March 19",
-   year = "March 19, 2015",
-   note = "http://www.slashgear.com/tesla-model-s-autopilot-update-due-in-3-4-months-19374458/",
 }
 
 @TECHREPORT{SivakSchoettleSick,
