images added, but not yet added to repo, so will cause build problems elsewhere

--- a/abstract.tex
+++ b/abstract.tex
@@ -46,7 +46,7 @@ different stakes and trade-offs. The work examines how automation
 taxonomies, such as that by the NHTSA, fail to account for these
 possibilities. Finally, this work examines what cultural 
 understandings need to change to 
-make this (cyborg) picture more broadly comprehensible, and suggest potential
+make this (cyborg) picture more broadly comprehensible, and suggests potential
 impacts for policy and future technological development. It argues that
 a broader appreciation for 
 our hybrid engagements with machines, and recognition that automation
