--- a/chap1.tex
+++ b/chap1.tex
@@ -698,6 +698,13 @@ starts. Achieving humanlike intelligence via logic
 systems was the archetypal dream of early AI, but while logic is
 part of the puzzle it is not the entireity of it.
 
+%% \begin{figure}[h]
+%%   \caption{The Stanford Research Institute's Shakey robot, with its
+%%     parts diagrammed. Photo credit SRI International \cite{shakeyIMG}.}
+%%   \centering
+%%   \includegraphics{shakey}
+%% \end{figure}
+
 \subsection{Robotics, Embodiment, Probability}
 
 Persistence, funding, and new approaches did yield results.
