--- a/chap2.tex
+++ b/chap2.tex
@@ -912,6 +912,13 @@ artifact of interest. Because the visual detection technologies used
 by autonomous vehicles are compatible with the visual technologies of
 media representation, new types of seeing are opened to us.
 
+\begin{figure}[h]
+  \caption{A simulated pedestrian detection image, showing the
+    detected figures outlines by yellow boxes. Photo by Marjan Lazarevski  \cite{pedestrianimage}.}
+  \centering
+  \includegraphics{pedestriandetection2}
+\end{figure}
+
 %%Kelly Joyce on fMRI: Magnetic Appeal: MRI and the Myth of
 %%Transparency
 %% The rhetoric of the
