--- a/concl.tex
+++ b/concl.tex
@@ -594,7 +594,7 @@ ideas about how automated vehicles can provide greater mobility, help
 the environment, and reduce traffic, they are unlikely to economically
 back concepts that are against their interests---anything that reduces
 the number of vehicles on the road,\footnote{Thanks to Joe Dumit for eloquently
-  making this observation during a recent visit I made to UC Davis.}
+  making this observation during my recent visit to UC Davis.}
 or reduces the overall cost of those 
 vehicles, without providing a new revenue stream to compensate,
 represents a deeply suspect investment. 
