--- a/intro.tex
+++ b/intro.tex
@@ -25,9 +25,9 @@ While present work on automated vehicles by Google, Mercedes, Tesla,
 and others might lead one to think that driverless vehicles are a
 new idea, specifically enabled by recent advances in artificial
 intelligence, they have not merely been dreamed about, but actually
-built in prototype form, as far back as 1925, when Houdina Radio Control
-built the ``Linrrican Wonder'' from a 1926 Chandler, and demonstrated
-it live on the streets of New York City. But it would be wrong to
+built in prototype form, as far back as 1925, when Houdina Radio
+Control's ``Linrrican Wonder'' was demonstrated
+live on the streets of New York City. But it would be wrong to
 characterize a 90-year engineering journey as the continual
 progression toward a ``modern,'' developed device. There is nothing
 fundamentally natural about the way automated---or, often interchangeably
@@ -49,7 +49,7 @@ implying more complete automation, or conventional ideas thereof.}---vehicles ar
 envisioned, designed, and talked about. Instead, automated vehicle
 development has sustained several successive, overlapping paradigms,
 in part, though not completely, driven by the technical capabilities
-of and excitement about contemporary technologies. However, equally
+of and excitement about contemporary technologies. Equally
 important in this story are the ideologies of control and
 human-machine interaction that shape engineering practice and vehicle 
 development, and alter how developments are represented and discussed
@@ -124,6 +124,16 @@ though it seems relatively primitive in retrospect (hardly more than a
 glorified RC-car, though it removed the driver from a full-size vehicle), may well have
 helped capture the popular imagination. This compelling idea would reemerge
 a few years later.
+
+\begin{figure}[t]
+  \caption{Houdina Radio Control's Linrrican Wonder, as pictured in
+    \emph{Radio News}, November 1925 \cite{greenRadio}. The article,
+    in a radio enthusiast magazine, pays detailed attention to
+    the operation of the vehicle, far more than is in evidence in
+    popular press accounts.}
+  \centering
+  \includegraphics{linrrican2}
+\end{figure}
 
 %% , one which included trains and aircraft, a farm, and an
 %% amusement park
@@ -295,6 +305,14 @@ driver fatigue \cite{weber}.
 The limitless possibilities of electricity, measured and controlled by
 America's Electric Light and Power Companies, reproduced a conservative
 present into an equally conservative future. 
+
+\begin{figure}[h]
+  \caption{Image from an advertisement titled ``Power Companies Build
+    for Your New Electric Living,'' \emph{Saturday Evening Post}, 1950s.
+    Picture credit: \cite{novakPicture}.}
+  \centering
+  \includegraphics{aelpc_ad}
+\end{figure}
 
 %% If electricity was still the force that would be harnessed to make the
 %% roadways safe, what were the ``mechanical equivalents of sense
@@ -514,7 +532,16 @@ self-driving vehicle. John Leonard,
   discussion with the author, December 3, 2014.} the Urban Challenge
 vehicles, both via their sensor setups and algorithmic approaches to
 navigation, can be interpreted as another step along the path to the
-modern self-driving car, as instantiated within Google's design approach. 
+modern self-driving car, as instantiated within Google's design
+approach. 
+
+\begin{figure}[h]
+  \caption{MIT's Urban Challenge vehicle. The grey cylindrical sensor
+    at the top is a Velodyne LIDAR sensor. Below it sits a row of other
+    LIDAR sensors and cameras. Picture credit: DARPA \cite{DARPAUC}.}
+  \centering
+  \includegraphics{darpa_uc}
+\end{figure}
 
 \subsection{Automated Cars in 2015}
 
