--- a/main.bib
+++ b/main.bib
@@ -2197,6 +2197,50 @@
    pages = "193--210",
 }
 
+@ARTICLE{greenRadio,
+   author = "Herndon Green",
+   title = "{R}adio-{C}ontrolled {A}utomobile",
+   journal = "Radio News",
+   month = "November",
+   year = "November, 1925",
+   pages = "592, 656",
+   note = "http://www.americanradiohistory.com/Archive-Radio-News/20s/Radio-News-1925-11-R.pdf",
+}
+
+@ARTICLE{novakPicture,
+   author = "Matt Novak",
+   title = "{D}riverless {C}ar of the {F}uture (1957)",
+   journal = "Paleofuture",
+   month = "December",
+   year = "December 9, 2010",
+   note = "http://paleofuture.com/blog/2010/12/9/driverless-car-of-the-future-1957.html",
+}
+
+@UNPUBLISHED{DARPAUC,
+   key = "DARPA",
+   author = "",
+   title = "{P}hoto of the {MIT} {U}rban {C}hallenge {V}ehicle",
+   month = "November",
+   year = "November 3, 2007",
+   note = "From the DARPA image gallery: archive.darpa.mil/grandchallenge/gallery.html, http://archive.darpa.mil/grandchallenge/images/photos/11\_3\_07/D2X\_0946.jpg",
+}
+
+@ARTICLE{shakeyIMG,
+   key = "Shakey",
+   author = "",
+   title = "{S}hakey",
+   journal = "SRI International's Artificial Intelligence Center",
+   year = "Accessed May 3, 2015",
+   note = "http://www.ai.sri.com/shakey/images.php",
+}
+
+@ARTICLE{pedestrianimage,
+   author = "Marjan Lazarevski",
+   title = "`{S}uicidal' pedestrians (photo)",
+   journal = "flickr",
+   year = "June 14, 2014",
+   note = "https://www.flickr.com/photos/mlazarevski/14239886699/",
+}
 
 
 
