little errors fixed, three of four figures changed to display before their captions

--- a/chap2.tex
+++ b/chap2.tex
@@ -1597,7 +1597,8 @@ they are supposed to solve'' \cite{novakNationalAutomated}.}
 
 Developers tend to buy into utopian visions of big cities freed of cars, with no
 parked cars on the streets and only driverless cabs.\footnote{My
-  interviews suggest developers see
+  interviews, and those of a fellow researcher performing ethnographic
+  work, suggest developers see
 themselves as trying to change society. This self-image is not limited
 to those working on mobility systems \cite{naughtonTech}.} This desire to
 change the way cities operate is admirable: our cities have a
@@ -1812,14 +1813,19 @@ expected user is the commuting, upper-middle-class, working father or
 the privileged college boy (and the opposers of the technology are
 branded as ``soccer moms,'' as one informant said), we risk developing
 vehicles that preferentially serve certain dominant uses and not
-others. Driverless vehicles stand to mean many things to many
-different people, and though this blindness to other needs and uses may not be
-shared by all developers in this space, it is not one we can afford.
+others. 
+When I asked one researcher whether developers have an idea
+of what driverless cars would mean for people who have children, he
+replied:  ``They don't think about it.'' Though this blindness to
+other needs and uses may not be 
+shared by all developers in this space, it is not something we can afford.
 
-%% When I asked one informant whether the developers have an idea
-%% of what driverless cars would mean for people who have children, he
-%% replied:  ``They don't think about it.'' While certainly not shared by
+%% While certainly not shared by
 %% all developers in this space, it is not a vision we can afford.
+
+%% Driverless vehicles stand to mean many things to many
+%% different people, and though this blindness to other needs and uses may not be
+%% shared by all developers in this space, it is not one we can afford.
 
 \section{Conclusion}
 
