--- a/cover.tex
+++ b/cover.tex
@@ -67,7 +67,7 @@
 \author{Erik Lee Stayton}
 % If you wish to list your previous degrees on the cover page, use the 
 % previous degrees command:
-       \prevdegrees{Sc.B. Physics A.B. English, Brown University (2007)}
+       \prevdegrees{Sc.B. Physics A.B. English, Brown University (2011)}
 % You can use the \\ command to list multiple previous degrees
 %       \prevdegrees{B.S., University of California (1978) \\
 %                    S.M., Massachusetts Institute of Technology (1981)}
@@ -93,8 +93,8 @@
 % If there is more than one supervisor, use the \supervisor command
 % once for each.
 \supervisor{T. L. Taylor}{Associate Professor of Comparative Media Studies}
-\supervisor{David A. Mindell}{Professor of the History of Engineering and
-Manufacturing (STS) \\ Professor of Aeronautics and Astronautics}
+\supervisor{David A. Mindell}{Dibner Professor of the History of Engineering and
+Manufacturing \\ Professor of Aeronautics and Astronautics}
 
 % This is the department committee chairman, not the thesis committee
 % chairman.  You should replace this with your Department's Committee
@@ -161,12 +161,14 @@ and sharpen it. I look forward to continuing to work with him on
 future projects. Nick Montfort (who has exhorted me repeatedly to, as
 much as possible, interrogate the technical objects themselves),
 William Uricchio (who has challenged my terminological precision),
-and Heather Hendershot (who has kept my eye on science fiction) have all
+Heather Hendershot (who has kept my eye on science fiction), and
+Shannon Larkin (who has furnished continual doses of sanity) have all
 been indispensable in their own ways, and have given freely of both
 thesis and career advice. Discussions with Kate Crawford, Nick Seaver,
 Tarleton Gillespie, Merritt Roe Smith, Stefan Helmreich, and G\"{o}de Both have also
 shaped this work and made it what it is; as have innumerable
-discussions at conferences. Conversations with a number of informants
+discussions at conferences, many with people entirely unrelated to the
+field. Conversations with a number of informants
 (including Ryan Chin and John Leonard)
 furnished important material, and though I cannot list all of them by
 name, I wish to thank them all for giving of their time.
@@ -193,7 +195,7 @@ time.'' I am so pleased
 to have been able to share this work with both of you, and both it, and I,
 have profited immensely from your input and your presence. Abigail
 Strait, whose food, hospitality, and seemingly endless supply of tea I have
-partaken of innumerable (at least more than twenty!) times during the
+partaken of innumerable (at least twenty!) times during the
 writing of this thesis, you will always have my gratitude.
 
 But most of all, Evan Donahue, whose keen commentary, acerbic wit, and
