--- a/intro.tex
+++ b/intro.tex
@@ -105,7 +105,7 @@ exciting, emerging technology that was envisioned as a way to take
 the driver out of the vehicle, even if a human's direct commands were
 still necessary for vehicle operations. Aachen Motors's ``Phantom
 Auto,'' operating on the same principles, toured Milwaukee a year
-later, \cite{phantomAuto} and returned as an attraction in
+later \cite{phantomAuto}, and returned as an attraction in
 Fredericksburg in 1932 \cite{phantomAuto2}.\footnote{Radio control had
   at this point been public knowledge for at least two 
 decades, since Nikola Tesla's 1898 demonstration of a radio-controlled
@@ -126,13 +126,14 @@ helped capture the popular imagination. This compelling idea would reemerge
 a few years later.
 
 \begin{figure}[t]
+  \begin{center}
+  \includegraphics{linrrican}
+  \end{center}
   \caption{Houdina Radio Control's Linrrican Wonder, as pictured in
     \emph{Radio News}, November 1925 \cite{greenRadio}. The article,
-    in a radio enthusiast magazine, pays detailed attention to
-    the operation of the vehicle, far more than is in evidence in
+    in a radio enthusiast magazine, pays far more detailed attention to
+    the operation of the vehicle than
     popular press accounts.}
-  \centering
-  \includegraphics{linrrican2}
 \end{figure}
 
 %% , one which included trains and aircraft, a farm, and an
@@ -170,14 +171,15 @@ future city with multi-lane elevated expressways filled with largely
 automated vehicles. While the cars' lateral position was maintained via
 curved barriers, the Futurama exhibit described that distance
 between cars would be maintained via a ``sophisticated system of radio
-control'' \cite[p. 5]{wetmore}.\footnote{Prior to electronic circuits, this would have been
-accomplished with vacuum tubes, a technology well-known at the time,
-and certainly subject to significant hurdles in terms of mechanical
-reliability. It was not until digital electronics were invented that
+control'' \cite[p. 5]{wetmore}. Despite the 
+fragility of glass vacuum tubes traveling at high
+speed,\footnote{Vacuum tube technology, though well-understood at the time,
+was subject to significant hurdles in terms of mechanical
+reliability. It was not until silicon transistors were invented and
+popularized that
 hardware became the relatively stable component of driverless systems,
 with software reliability becoming the key issue \cite[p.
-  15]{wetmore}.} Despite the 
-fragility of glass vacuum tubes traveling at high speed, and despite the fact
+  15]{wetmore}.} and despite the fact
 that the technology could work well only for sufficiently
 well-designed roads (high-speed highways, built specifically for these
 vehicles, with attendant infrastructural costs), such a system was
@@ -307,11 +309,12 @@ America's Electric Light and Power Companies, reproduced a conservative
 present into an equally conservative future. 
 
 \begin{figure}[h]
+  \begin{center}
+  \includegraphics{aelpc_ad_2}
+  \end{center}
   \caption{Image from an advertisement titled ``Power Companies Build
     for Your New Electric Living,'' \emph{Saturday Evening Post}, 1950s.
     Picture credit: \cite{novakPicture}.}
-  \centering
-  \includegraphics{aelpc_ad}
 \end{figure}
 
 %% If electricity was still the force that would be harnessed to make the
@@ -388,10 +391,10 @@ Public proposals to this effect are rare, but the concept remains
 important.}\end{quote}
  Advances in
 electronics, and the expansion of early control theory into
-cybernetics through the work of Norbert Wiener and his contemporaries seemed
+cybernetics through the work of Norbert Wiener and his contemporaries, seemed
 poised to make revolutionary applications of electrical control
 possible. Concern about human reaction times persisted. In a lecture given in 1960, Wiener
-make the case for automated control systems: ``by the time we are able
+made the case for automated control systems: ``by the time we are able
 to react to our senses and stop the car which we are driving, it may
 already have run head on into a wall,'' he wrote, and the answer to
 this problem was the lightning speed of cybernetic control \cite{wienerOn}. But real
@@ -403,7 +406,7 @@ with \emph{Safety Last} \cite{oconnellmyers} and \emph{Unsafe at Any Speed} \cit
 for an
 increasing array of safety systems designed to make vehicles more forgiving
 of human errors---starting with rudimentary
-mechanical restraints such as seat belts, and continuing through
+mechanical restraints such as seat belts, and continuing with
 airbags, ABS, and other more complex automation systems.
 
 \subsection{Research at the Turn of the Century}
@@ -433,9 +436,9 @@ been experimented with for vehicle guidance since 1969, it was not
 until the 1980s that microelectronics became powerful enough to
 process images in near real time and compact enough to be placed on
 the vehicle itself \cite[p. v]{dickmannsDynamic} \cite{vamors-p}. In the 1980s, Ernst
-Dickmanns's lab at the 
-University Bundswerhr, in Munich, Germany was active in some of the
-earliest self-driving car research and development. Their early
+Dickmanns's lab at Bundeswehr
+University, in Munich, Germany was active in some of the
+earliest of this self-driving car research and development. Their early
 vehicle, a specially equipped 5-ton Mercedes-Benz van---computerized
 controls could be used to perform all necessary driver inputs---was
 fitted with cameras, other sensors, and an image-processing system to
@@ -535,12 +538,13 @@ navigation, can be interpreted as another step along the path to the
 modern self-driving car, as instantiated within Google's design
 approach. 
 
-\begin{figure}[h]
+\begin{figure}[t]
+  \begin{center}
+  \includegraphics{darpa_uc_2}
+  \end{center}
   \caption{MIT's Urban Challenge vehicle. The grey cylindrical sensor
     at the top is a Velodyne LIDAR sensor. Below it sits a row of other
     LIDAR sensors and cameras. Picture credit: DARPA \cite{DARPAUC}.}
-  \centering
-  \includegraphics{darpa_uc}
 \end{figure}
 
 \subsection{Automated Cars in 2015}
@@ -674,7 +678,7 @@ electric car company, Tesla Motors, is working on an
   automation, and repeats the name of Chrysler's early ``Auto Pilot''
 cruise-control system, from the late 1950s
 \cite{kesslerElon}. Note that automated driving will not be available
-in residential neighborhoods because Tesla does not believe it is safe
+in residential neighborhoods because Tesla does not yet believe it is safe
 enough \cite{slashgearDaviesT}.} mode for their cars, intended to be released publicly by
 the summer of 2015.
 Though Tesla is clear that human involvement and judgment will be
