--- a/main.bib
+++ b/main.bib
@@ -116,7 +116,7 @@
    author = "Merritt Roe Smith",
    title = "{Y}ankee {A}rmorers and the {U}nion {W}ar {M}achine",
    year = 2014,
-   note = "(Author's draft, July 1, 2014)",
+   note = "(Author's draft, July 1, 2014.) To be published in Hacker, B., editor (2016). \emph{Astride Two Ages: Technology and the Civil War.} Smithsonian Institution Press.",
 }
 
 @BOOK{roesmithHarpers,
@@ -1599,8 +1599,8 @@
    key = "HireArt",
    author = "",
    year = "Accessed May 3, 2015",
-   title = "{S}elf-{D}riving {V}ehicle {O}perator / {O}perations {A}ssociate",
-   note = "Job posting at: https://www.hireart.com/jobs/6ba4ebe8/apply?",
+   title = "{S}elf-{D}riving {V}ehicle {O}perator / {O}perations {A}ssociate (Job posting)",
+   note = "https://www.hireart.com/jobs/6ba4ebe8/apply?",
 }
 
 @ARTICLE{knaptonDriverless,
